// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WebBadge /> matches snapshot (dark) 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#121212",
      },
      {
        "alignItems": "center",
        "gap": 8,
        "padding": 32,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#a3a3a3",
        },
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        [
          {
            "fontFamily": "JetBrains Mono",
            "fontSize": 12,
            "fontWeight": "500",
            "letterSpacing": 0.6000000000000001,
            "lineHeight": 16,
          },
          {
            "fontFamily": "ui-monospace",
          },
        ],
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        {
          "textAlign": "center",
        },
      ]
    }
  >
    v
    57.0.14
  </Text>
  <Image
    source={
      {
        "testUri": "../../../assets/images/expo-badge-white.png",
      }
    }
    style={
      {
        "aspectRatio": 5.125,
        "width": 123,
      }
    }
  />
</View>
`;

exports[`<WebBadge /> matches snapshot (light) 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fcf8ff",
      },
      {
        "alignItems": "center",
        "gap": 8,
        "padding": 32,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#464555",
        },
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        [
          {
            "fontFamily": "JetBrains Mono",
            "fontSize": 12,
            "fontWeight": "500",
            "letterSpacing": 0.6000000000000001,
            "lineHeight": 16,
          },
          {
            "fontFamily": "ui-monospace",
          },
        ],
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        {
          "textAlign": "center",
        },
      ]
    }
  >
    v
    57.0.14
  </Text>
  <Image
    source={
      {
        "testUri": "../../../assets/images/expo-badge.png",
      }
    }
    style={
      {
        "aspectRatio": 5.125,
        "width": 123,
      }
    }
  />
</View>
`;
